k8s/dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernets.io/rewrite-target: /%1
    nginx.ingress.kubernets.io/use-regex: 'true'
spec:
  rules:
  - host: sc-tech-test.dev
    http:
      paths:
      - path: "/api/auth/?(.*)"
        backend:
          service:
            name: auth-service-cluster-ip
            port:
              number: 4000
      - path: "/api/(users/?.*)"
        backend:
          service:
            name: user-service-cluster-ip
            port:
              number: 4000
